# CraftAI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
CraftAI/: .env  README.md  docker-compose.yml  setup.sh
CraftAI/backend/: requirements.txt
CraftAI/backend/app/: database.py  main.py
CraftAI/frontend/: index.html  package.json  tailwind.config.js
CraftAI/frontend/src/: App.jsx  index.css
alembic/: env.py
alembic/versions/: 66b6a87d2f1a_add_order_address.py  810bf99208a0_add_shipping_number_and_complement.py  8b78b90541cb_add_customizable_options.py  a2daf945552e_add_email_verification_fields_to_users_.py  abd224bdc31a_add_cart.py  c2a06808930b_add_images_urls.py  de219f563197_add_order_image_url.py  e457311db20f_initial_migration.py
config/: logger.py  settings.py
scripts/: test_api.py
src/api/: Dockerfile.api  main.py
src/api/ai/: __init__.py  client.py  placeholders.py  schemas.py
src/database/: __init__.py  migration.py  session.py
src/storage/: __init__.py  base.py  factory.py  image_service.py  local.py  s3.py
src/web/: index.html  package.json  tailwind.config.js
tests/: conftest.py
tests/integration/: test_order_flow.py
tests/unit/: test_ai_client.py  test_auth_routes.py  test_auth_service.py  test_cart_routes.py  test_database_models.py  test_email_verification_routes.py  test_models.py  test_orders_routes.py  test_product_image_repository.py  test_repositories.py  test_s3_storage.py  test_sellers_routes.py  test_users_me_routes.py
(+77 files in other folders)
