[project]
name = "craftai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "zxcvbn>=4.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "boto3>=1.42.97",
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
